syntax = "proto2";
package pbRequest;

message GetKeywordId
{
   required string deviceName = 1;
   required string keywordName = 2;
}

message GetRecipientId
{
   required string firstName = 1;
   required string lastName = 2;
}

message ReadKeyword
{
   required int32 keywordId = 1;
}

message WaitForNextAcquisition
{
   required int32 keywordId = 1;
   optional string timeout = 2;
}

message WaitForNextAcquisitions
{
   repeated int32 keywordId = 1;
   optional string timeout = 2;
}

message WaitForEvent
{
   repeated int32 keywordId = 1;
   required bool receiveDateTimeEvent = 2;
   optional string timeout = 4;
}

message GetKeywordsByCapacity
{
   required string capacity = 1;
}

message WriteKeyword
{
   required int32 keywordId = 1;
   required string newState = 2;
}

message SendNotification
{
   required int32 keywordId = 1;
   required int32 recipientId = 2;
   required string message = 3;
}

message GetInfo
{
   enum Key { kSunrise = 0; kSunset = 1; kLatitude = 2; kLongitude = 3; kAltitude = 4; kYadomsServerOS = 5; kYadomsServerVersion = 6; }
   required Key key = 1;
}
   
message GetKeywordName
{
   required int32 keywordId = 1;
}

message GetKeywordDeviceName
{
   required int32 keywordId = 1;
}

message msg
{
   oneof OneOf
   {
      GetKeywordId getKeywordId = 1;
      GetRecipientId getRecipientId = 2;
      ReadKeyword readKeyword = 3;
      WaitForNextAcquisition waitForNextAcquisition = 4;
      WaitForNextAcquisitions waitForNextAcquisitions = 5;
      WaitForEvent waitForEvent = 6;
      WriteKeyword writeKeyword = 7;
      SendNotification sendNotification = 8;
      GetInfo getInfo = 9;
	  GetKeywordsByCapacity getKeywordsByCapacity = 10;
	  GetKeywordName getKeywordName = 11;
	  GetKeywordDeviceName getKeywordDeviceName = 12;
   }
}
